Potentially fixed navbar issue on mobile

--- a/Website/com/tutorial/NavBar.css
+++ b/Website/com/tutorial/NavBar.css
@@ -137,6 +137,5 @@ label.navbarTitle
     .alternativeTitle
     {
         margin-top: 5.3vw;
-        color: green;
     }
 }
